@@ -9,10 +9,36 @@ The workspace contains two folders by default, where:
 - `src`: the folder to maintain sources
 - `lib`: the folder to maintain dependencies
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+## Guildline
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+### Start mail server
 
-## Dependency Management
+* **Step 1:** `cd mail-user-agent\server`
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+* **Step 2:**
+    * Java version < 11: `java -jar test-mail-server-1.0.jar -s 2225 -p 3335 -m ./`
+    * Java version >= 11 (Windows): `java --module-path "path\to\javafx\javafx-sdk-xx\lib" --add-modules javafx.controls,javafx.fxml -jar test-mail-server-1.0.jar -s 2225 -p 3335 -m ./`
+
+### Run client app by using .jar
+
+* **Step 1:** Go to `/src`
+
+* **Step 2:** Open `mail-user-agent.jar`
+
+### Run client app by command
+
+**MacOS/Linux:**
+
+* **Step 1:** `cd \mail-user-agent\src`
+
+* **Step 2:** `./compile.sh`
+
+* **Step 3:** `./run.sh`
+
+*Window:**
+
+* **Step 1:** `cd \mail-user-agent\src`
+
+* **Step 2:** `./compile.ps1`
+
+* **Step 3:** `./run.ps1`
